fixed lunchtime variable

--- a/nickdima/silk_thai/template/menu/menu.html
+++ b/nickdima/silk_thai/template/menu/menu.html
@@ -35,7 +35,7 @@
             <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
                 Click Images To Go To The Customization Page!
             </h2>
-            {% if lunchtime == true %}
+            {% if lunch_time == true %}
             <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">
                 Lunch portions are currently available
             </h3>
