added checkout page

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -106,7 +106,7 @@
                             {% if accept_delivery == false %}
                             We are not accepting new delivery orders at this time
                             {% elif delivery_minimum_met == true and accept_delivery == true %}
-                            <input type="radio" id="delivery" name="order_type" value="Delivery"> Delivery
+                            <input type="radio" id="delivery" name="order_type" value="delivery"> Delivery
                             {% else %}
                             Must meet $20 minimum for delivery
                             {% endif %}
