updated no new orders page

--- a/nickdima/silk_thai/template/checkout/not_accepting_online.html
+++ b/nickdima/silk_thai/template/checkout/not_accepting_online.html
@@ -17,9 +17,10 @@
 
         <div class="container align-center">
             <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-                We are currently not accepting new online orders, check back soon. If you have already submitted your order, it will be prepared for you as normal.
+                We are currently not accepting new online orders, please check back soon. 
+                <br>If you have already submitted your order, it will be prepared for you as normal.
                 
-                Our apologies for this inconvenience!
+                <br>Our apologies for this inconvenience!
             </h2>
 
         </div>
