fixed broken page

--- a/nickdima/silk_thai/template/checkout/not_accepting_online.html
+++ b/nickdima/silk_thai/template/checkout/not_accepting_online.html
@@ -18,9 +18,12 @@
         <div class="container align-center">
             <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
                 We are currently not accepting new online orders, please check back soon. 
-                <br>If you have already submitted your order, it will be prepared for you as normal.
-                
-                <br>Our apologies for this inconvenience!
+                <br>
+                <br>
+                If you have already submitted your order, it will be prepared for you as normal.
+                <br>
+                <br>
+                Our apologies for this inconvenience!
             </h2>
 
         </div>
