--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -1,137 +1,51 @@
-<!DOCTYPE html>
-<html>
+{% extends 'order_parent.html' %}
 
-<head>
-    {% include 'universal.html' %}
-    <meta name="description" content="Site Creator Description">
-    <title>Order Summary</title>
-    {% include 'universal-css-links.html' %}
-</head>
-
-<body>
-    <!--Navigation bar-->
-    {% include 'nav.html' %}
-    <!--End navigation bar-->
-
-    <section class="features16 cid-r0R1Wm1xUa" id="features16-i">
-
-        <div class="container align-center">
-            <h2 class="pb-3 mbr-fonts-style mbr-section-title display-2">
-                Your Order</h2>
-            <h3 class="pb-5 mbr-section-subtitle mbr-fonts-style mbr-light display-5">Make Any Edits Here To Quantity Before Checkout</h3>
-            <div class="row media-row">
-
-                {% if empty_cart is defined %}
-                <div class="team-item col-lg-3 col-md-6">
-                    <p class="mbr-fonts-style display-5">{{empty_cart}}</p>
-                </div>
-                {% else %}
-                {% for item in items %}
-                <div class="team-item col-lg-3 col-md-6">
-                    <div class="item-image">
-                        <img src="{{ url_for('food.static', filename=item['Img_url']) }}" alt="" title="">
-                    </div>
-                    <div class="item-caption py-3">
-                        <div class="item-name px-2">
-                            <p class="mbr-fonts-style display-5">
-                                {{item['Title']}}
-                                {% if item['Topping'] != false %}with {{item['Topping'][0]}}{% endif %}</p>
-                            {% if item['Spice'] != false %}
-                            <p class="mbr-fonts-style display-6">
-                                Spice: {{item['Spice']}}</p>
-                            {% endif %}
-                            {% if item['Extra'][0] != 'None' and item['Extra'] != false %}
-                            <p class="mbr-fonts-style display-6">
-                                Extra: {{item['Extra'][0]}}</p>
-                            {% endif %}
-                            {% if item['Extra_Rice'] != '0' and item['Extra_Rice'] != false %}
-                            <p class="mbr-fonts-style display-6">
-                                Extra Rice: {{item['Extra_Rice']}}</p>
-                            {% endif %}
-                            {% if item['Portion'] != false %}
-                            <p class="mbr-fonts-style display-6">
-                                Portion: {{item['Portion_Type']}}</p>
-                            {% endif %}
-                            {% if item['Notes'] != false %}
-                            <p class="mbr-fonts-style display-6">
-                                Notes: {{item['Notes']}}</p>
-                            {% endif %}
-                        </div>
-                        <div class="item-role px-2">
-                            <p>Price: ${{ item['Total'] }}</p>
-                        </div>
-                        <form class="mbr-fonts-style display-6" method='POST' action='{{ url_for("checkout.cart_remover") }}'>
-                            <input type='hidden' name='remove_id' value='{{ item["Id"] }}'>
-                            <input type='submit' class="btn btn-primary display-6" value='Remove'>
-                        </form>
-
-                    </div>
-                </div>
-                {% endfor %}
-                {% endif %}
-
-            </div>
-    </section>
-
-    <section class="mbr-section form3 cid-r0R3r9oDVn" id="form3-j">
+{% block title %}Order Summary{% endblock %}
+{% block body %}
+<section class="mbr-section form3 cid-r0R3r9oDVn" id="form3-j">
 
 
 
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="title col-12 col-lg-8">
-                    <h2 class="align-center pb-2 mbr-fonts-style display-2">
-                        Order Details</h2>
-                    <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5">
-                        Items: {% if session['total'] is defined %}{{session['total'][1]}}{% else %}0{% endif %}
-                        <br>Total Price: {% if session['total'] is defined %}${{session['total'][0]}}{% else %}Free{% endif %}
-                    </h3>
-                </div>
-            </div>
-
-            <div class="row justify-content-center">
-                <div class="container align-center">
-                    <form action="{{ url_for('checkout.summary') }}" method="post">
-
-                        <p class="mbr-fonts-style display-5">
-                            Select Order Type
-                        </p>
-                        <p class="mbr-fonts-style display-5">
-                            {% if accept_takeout == true %}
-                            <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
-                            {% else %}
-                            We are not accepting new takeout orders at this time
-                            {% endif %}
-                            <br>
-                            {% if accept_delivery == false %}
-                            We are not accepting new delivery orders at this time
-                            {% elif delivery_minimum_met == true and accept_delivery == true %}
-                            <input type="radio" id="delivery" name="order_type" value="delivery"> Delivery
-                            {% else %}
-                            Must meet $20 minimum for delivery
-                            {% endif %}
-                            <br>
-                        </p>
-
-                        <button href="" type="submit" class="btn btn-primary display-4">{% if is_currently_open == true %}Continue Checkout{% else %}We Are Currently Closed{% endif %}</button>
-                    </form>
-                </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="title col-12 col-lg-8">
+                <h2 class="align-center pb-2 mbr-fonts-style display-2">
+                    Order Details</h2>
+                <h3 class="mbr-section-subtitle align-center pb-5 mbr-light mbr-fonts-style display-5">
+                    Items: {% if session['total'] is defined %}{{session['total'][1]}}{% else %}0{% endif %}
+                    <br>Total Price: {% if session['total'] is defined %}${{session['total'][0]}}{% else %}Free{% endif %}
+                </h3>
             </div>
         </div>
-    </section>
 
+        <div class="row justify-content-center">
+            <div class="container align-center">
+                <form action="{{ url_for('checkout.summary') }}" method="post">
 
-    {% include 'universal-bottom.html' %}
+                    <p class="mbr-fonts-style display-5">
+                        Select Order Type
+                    </p>
+                    <p class="mbr-fonts-style display-5">
+                        {% if accept_takeout == true %}
+                        <input type="radio" id="takeout" name="order_type" value="takeout" checked> Takeout
+                        {% else %}
+                        We are not accepting new takeout orders at this time
+                        {% endif %}
+                        <br>
+                        {% if accept_delivery == false %}
+                        We are not accepting new delivery orders at this time
+                        {% elif delivery_minimum_met == true and accept_delivery == true %}
+                        <input type="radio" id="delivery" name="order_type" value="delivery"> Delivery
+                        {% else %}
+                        Must meet $20 minimum for delivery
+                        {% endif %}
+                        <br>
+                    </p>
 
-    <script src="{{ url_for('checkout.static', filename='assets/web/assets/jquery/jquery.min.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/popper/popper.min.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/tether/tether.min.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/bootstrap/js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/smoothscroll/smooth-scroll.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/dropdown/js/script.min.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/touchswipe/jquery.touch-swipe.min.js') }}"></script>
-    <script src="{{ url_for('checkout.static', filename='assets/theme/js/script.js') }}"></script>
-
-</body>
-
-</html>
+                    <button href="" type="submit" class="btn btn-primary display-4">{% if is_currently_open == true %}Continue Checkout{% else %}We Are Currently Closed{% endif %}</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+{% endblock %}
