added path to checkout

--- a/nickdima/silk_thai/template/checkout/order_summary.html
+++ b/nickdima/silk_thai/template/checkout/order_summary.html
@@ -1,10 +1,8 @@
-{% extends 'order_parent.html' %}
+{% extends 'checkout/order_parent.html' %}
 
 {% block title %}Order Summary{% endblock %}
 {% block body %}
 <section class="mbr-section form3 cid-r0R3r9oDVn" id="form3-j">
-
-
 
     <div class="container">
         <div class="row justify-content-center">
