fixed order parent location

--- a/nickdima/silk_thai/template/checkout/order_checkout.html
+++ b/nickdima/silk_thai/template/checkout/order_checkout.html
@@ -1,4 +1,4 @@
-{% extends 'order_parent.html' %}
+{% extends 'checkout/order_parent.html' %}
 
 {% block title %}Order Checkout{% endblock %}
 {% block body %}
