--- a/nickdima/silk_thai/template/checkout/order_checkout.html
+++ b/nickdima/silk_thai/template/checkout/order_checkout.html
@@ -28,17 +28,19 @@
                 <form action="{{ url_for('checkout.checkout') }}" method="post">
 
                     <p class="mbr-fonts-style display-5">
-                        Credit Card Info
-                        -need to verify this stuff
-                        -#
-                        -cvv
-                        -expiration
+                    	<ul>Credit Card Info
+	                        <li>-need to verify this stuff</li>
+	                        <li>-#</li>
+	                        <li>-cvv</li>
+	                        <li>-expiration</li>
+                    	</ul>
                     </p>
                     <p class="mbr-fonts-style display-5">
-                        Customer Info
-                        -if delivery-address
-                        -email-
-                        -phone #-
+                        <ul>Customer Info
+	                        <li>-if delivery-address</li>
+	                        <li>-email-</li>
+	                        <li>-phone #-</li>
+                    	</ul>
                     </p>
                     <p class="mbr-fonts-style display-5">
                     	Tip
