--- a/nickdima/silk_thai/template/checkout/order_checkout.html
+++ b/nickdima/silk_thai/template/checkout/order_checkout.html
@@ -28,19 +28,24 @@
                 <form action="{{ url_for('checkout.checkout') }}" method="post">
 
                     <p class="mbr-fonts-style display-5">
-                    	<ul>Credit Card Info
-	                        <li>-need to verify this stuff</li>
-	                        <li>-#</li>
-	                        <li>-cvv</li>
-	                        <li>-expiration</li>
-                    	</ul>
+                        Credit Card Info
+                        <br>
+                        -need to verify this stuff
+                        <br>
+                        -#
+                        <br>
+                        -cvv
+                        <br>
+                        -expiration
                     </p>
                     <p class="mbr-fonts-style display-5">
-                        <ul>Customer Info
-	                        <li>-if delivery-address</li>
-	                        <li>-email-</li>
-	                        <li>-phone #-</li>
-                    	</ul>
+                        Customer Info
+                        <br>
+                        -if delivery-address
+                        <br>
+                        -email-
+                        <br>
+                        -phone #-
                     </p>
                     <p class="mbr-fonts-style display-5">
                     	Tip
