finish final submit page

--- a/nickdima/silk_thai/template/checkout/order_checkout.html
+++ b/nickdima/silk_thai/template/checkout/order_checkout.html
@@ -51,6 +51,9 @@
                     	Tip
                     	-change tip price on html immediately (but include in form submission)
                     </p>
+                    <p class="mbr-fonts-style display-5">
+                    	Special order instructions (knock, call, etc.)
+                    </p>
 
                     <button href="" type="submit" class="btn btn-primary display-4">{% if is_currently_open == true %}Submit Order{% else %}We Are Currently Closed{% endif %}</button>
                 </form>
