--- a/nickdima/silk_thai/template/admin/logout.html
+++ b/nickdima/silk_thai/template/admin/logout.html
@@ -7,7 +7,7 @@
 <body>
 You made it to the logout page
 <br>
-{% if logged_out == true %}
+{% if logged_out == false %}
 <form action="#" method="POST">
 	<input type='hidden' value='logout'>
 	<input type='submit' value="Logout">
