--- a/nickdima/silk_thai/template/admin/logout.html
+++ b/nickdima/silk_thai/template/admin/logout.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<script>
+		console.log('password: adminp')
+		console.log('username: adminu')
+	</script>
 </head>
 <body>
 You made it to the logout page
+<br>
 <br>
 {% if logged_out == false %}
 <form action="#" method="POST">
