adding manage page

--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -8,10 +8,23 @@
 <body>
 	<button id="to_logout">Logout</button>
 	<br>
+	<br>
 	You made it to the manage page
 	<br>
 	<br>
 	Do your dirty work here
+	<br>
+	<br>
+	<hr>
+	<br>
+	<br>
+	<section id="ingredients">
+
+	</section>
+
+	<section id="specific_items">
+
+	</section>
 
 
 	<script>
