--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -10,12 +10,12 @@
 		table {
 		    font-family: arial, sans-serif;
 		    border-collapse: collapse;
-		    width: 100%;
+		    width: 60%;
 		}
 
 		td, th {
 		    border: 1px solid #dddddd;
-		    text-align: left;
+		    text-align: center;
 		    padding: 8px;
 		}
 
@@ -50,7 +50,7 @@
 				<td><button id='change_chicken'>Alter</button></td>
 			</tr>
 			<tr>
-				<td>Centro comercial Moctezuma</td>
+				<td>Beef</td>
 				<td>Available</td>
 				<td><button id='change_beef'>Alter</button></td>
 			</tr>
