section align center

--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -37,7 +37,7 @@
 	<hr>
 	<br>
 	<br>
-	<section id="ingredients">
+	<section id="ingredients" align="center">
 		<table>
 			<tr>
 				<th>Ingredient</th>
