--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -11,6 +11,7 @@
 		    font-family: arial, sans-serif;
 		    border-collapse: collapse;
 		    width: 60%;
+		    margin: 0 auto;
 		}
 
 		td, th {
