--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -38,7 +38,7 @@
 	<hr>
 	<br>
 	<br>
-	<section id="ingredients" align="center">
+	<section id="ingredients">
 		<table>
 			<tr>
 				<th>Ingredient</th>
