--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -63,12 +63,66 @@
 		</table>
 	</section>
 
-	<section id="specific_items">
+	<br>
+	<br>
+	<br>
 
+	<section id="specific_items">
+		<table>
+			<tr>
+				<th>Item</th>
+				<th>Status</th>
+				<th>Change</th>
+			</tr>
+			<tr>
+				<td>Pad See Ew</td>
+				<td>Available</td>
+				<td><button id='change_pad_see_ew'>Alter</button></td>
+			</tr>
+			<tr>
+				<td>Drunken Noodles</td>
+				<td>Available</td>
+				<td><button id='change_drunken_noodles'>Alter</button></td>
+			</tr>
+			<tr>
+				<td>Pad Thai</td>
+				<td>Unavailable</td>
+				<td><button id='change_pad_thai'>Alter</button></td>
+			</tr>
+		</table>
 	</section>
 
 	<section id="web_config">
-
+		<form action="#" method="POST">
+			<table>
+				<tr>
+					<th>Attribute</th>
+					<th>Status</th>
+					<th>Change</th>
+				</tr>
+				<tr>
+					<td>Delivery Time</td>
+					<td>60</td>
+					<td><input name="delivery_time" value="60"></td>
+				</tr>
+				<tr>
+					<td>Takeout Time</td>
+					<td>15</td>
+					<td><input name="takeout_time" value="15"></td>
+				</tr>
+				<tr>
+					<td>Accept Takeout</td>
+					<td>True</td>
+					<td><select name="accept_takeout"><option value='True'>True</option><option value='False'>False</option></select></td>
+				</tr>
+				<tr>
+					<td>Accept Delivery</td>
+					<td>True</td>
+					<td><select name="accept_delivery"><option value='True'>True</option><option value='False'>False</option></select></td>
+				</tr>
+			</table>
+			<input type="submit" value="Submit">
+		</form>
 	</section>
 
 
