--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -40,6 +40,7 @@
 	<br>
 	<section id="ingredients">
 		<table>
+			<caption>Ingredients</caption>
 			<tr>
 				<th>Ingredient</th>
 				<th>Status</th>
@@ -62,13 +63,12 @@
 			</tr>
 		</table>
 	</section>
-
 	<br>
 	<br>
 	<br>
-
 	<section id="specific_items">
 		<table>
+			<caption>Food Items</caption>
 			<tr>
 				<th>Item</th>
 				<th>Status</th>
@@ -91,10 +91,13 @@
 			</tr>
 		</table>
 	</section>
-
+	<br>
+	<br>
+	<br>
 	<section id="web_config">
 		<form action="#" method="POST">
 			<table>
+				<caption>Operation Details</caption>
 				<tr>
 					<th>Attribute</th>
 					<th>Status</th>
@@ -120,8 +123,12 @@
 					<td>True</td>
 					<td><select name="accept_delivery"><option value='True'>True</option><option value='False'>False</option></select></td>
 				</tr>
+				<tr>
+					<td>-</td>
+					<td>-</td>
+					<td><input type="submit" value="Submit"></td>
+				</tr>
 			</table>
-			<input type="submit" value="Submit">
 		</form>
 	</section>
 
