changed name to id for a link

--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -74,7 +74,7 @@
 	<br>
 	<section id="web_config">
 		<form action="#" method="POST">
-			<table name="operation_table">
+			<table id="operation_table">
 				<caption>Operation Details</caption>
 				<tr>
 					<th>Attribute</th>
@@ -115,7 +115,7 @@
 	<br>
 	<br>
 	<section id="ingredients">
-		<table name="ingredients_table">
+		<table id="ingredients_table">
 			<caption>Ingredients</caption>
 			<tr>
 				<th>Ingredient</th>
@@ -145,7 +145,7 @@
 	<br>
 	<br>
 	<section id="specific_items">
-		<table name="food_item_table">
+		<table id="food_item_table">
 			<caption>Food Items</caption>
 			<tr>
 				<th>Item</th>
