--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -54,21 +54,24 @@
 </head>
 <body>
 	<ul class="page_nav">
+		<li class="nav_item"><a class="nav_link" href="#page_top">Top</a></li>
 		<li class="nav_item"><a class="nav_link" href="#operation_table">Operation Details</a></li>
 		<li class="nav_item"><a class="nav_link" href="#ingredients_table">Ingredients</a></li>
 		<li class="nav_item"><a class="nav_link" href="#food_item_table">Food Items</a></li>
 	</ul>
-	<br>
-	<br>
-	<button id="to_logout">Logout</button>
-	<br>
-	<br>
-	You made it to the manage page
-	<br>
-	<br>
-	Do your dirty work here
-	<br>
-	<br>
+	<section id="page_top">
+		<br>
+		<br>
+		<button id="to_logout">Logout</button>
+		<br>
+		<br>
+		You made it to the manage page
+		<br>
+		<br>
+		Do your dirty work here
+		<br>
+		<br>
+	</section>
 	<hr>
 	<br>
 	<br>
