--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -24,7 +24,12 @@
 		    background-color: #dddddd;
 		}
 
+		#page_top{
+			font-family: arial, sans-serif;
+		}
+
 		.page_nav {
+			font-family: arial, sans-serif;
 			position: -webkit-sticky;
 			position: sticky;
 			top: 0;
