--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+<head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -26,6 +26,7 @@
 
 		#page_top{
 			font-family: arial, sans-serif;
+			padding-top: 50px;
 		}
 
 		.page_nav {
@@ -55,15 +56,16 @@
 		.nav_item .nav_link:hover {
 		    background-color: #111;
 		}
-		</style>
-</head>
-<body>
+	</style>
 	<ul class="page_nav">
 		<li class="nav_item"><a class="nav_link" href="#page_top">Top</a></li>
 		<li class="nav_item"><a class="nav_link" href="#operation_table">Operation Details</a></li>
 		<li class="nav_item"><a class="nav_link" href="#ingredients_table">Ingredients</a></li>
 		<li class="nav_item"><a class="nav_link" href="#food_item_table">Food Items</a></li>
 	</ul>
+</head>
+<body>
+
 	<section id="page_top">
 		<br>
 		<br>
