--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -59,7 +59,7 @@
 	</style>
 	<ul class="page_nav">
 		<li class="nav_item"><a class="nav_link" href="#page_top">Top</a></li>
-		<li class="nav_item"><a class="nav_link" href="#operation_table">Operation Details</a></li>
+		<li class="nav_item"><a class="nav_link" href="#operation_table">Operations</a></li>
 		<li class="nav_item"><a class="nav_link" href="#ingredients_table">Ingredients</a></li>
 		<li class="nav_item"><a class="nav_link" href="#food_item_table">Food Items</a></li>
 	</ul>
