--- a/nickdima/silk_thai/template/admin/manage.html
+++ b/nickdima/silk_thai/template/admin/manage.html
@@ -61,7 +61,7 @@
 		<li class="nav_item"><a class="nav_link" href="#page_top">Top</a></li>
 		<li class="nav_item"><a class="nav_link" href="#operation_table">Operations</a></li>
 		<li class="nav_item"><a class="nav_link" href="#ingredients_table">Ingredients</a></li>
-		<li class="nav_item"><a class="nav_link" href="#food_item_table">Food Items</a></li>
+		<li class="nav_item"><a class="nav_link" href="#food_item_table">Food</a></li>
 	</ul>
 </head>
 <body>
